Work for #3744: rename placeholder to no entries text. Fix add button alignment

--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -143,6 +143,7 @@
     }
     .sd-paneldynamic__add-btn {
         display: initial;
+        margin-left: 0;
     }
 }
 .sd-question--paneldynamic.sd-question--paneldynamic-empty {
